--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="icon" href="./images/mobile-icon.png" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="images/mobile-icon.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header">
@@ -145,7 +140,7 @@
         <div class="label">
           <p>&lt;CSS&gt;</p>
           <img
-            class="image filter-brightness filter-blur"
+            class="image filter-brightness-blur"
             src="./images/image.png"
             alt="Машина"
           />
